@startuml
skinparam classAttributeIconSize 0
title Class Diagram - US06: Upgrade a Selected Station with a Building

' Classes principais
class UpgradeStationUI {
    - controller: UpgradeStationController
    + create()
    + getListOfStationsDTO(): List<StationDTO>
    + loadStation(stationDTO: StationDTO): Station
    + getListOfAvailableBuildings(): List<BuildingDTO>
    + getBuildingInfo(buildingDTO: BuildingDTO): Building
    + upgradeStation(station: Station, buildingDTO: BuildingDTO): boolean
}

class UpgradeStationController {
    - appSession: ApplicationSession
    + getListOfStationsDTO(): List<StationDTO>
    + loadStation(stationDTO: StationDTO): Station
    + getListOfAvailableBuildings(): List<BuildingDTO>
    + getBuildingInfo(buildingDTO: BuildingDTO): Building
    + upgradeStation(station: Station, buildingDTO: BuildingDTO): boolean
}

class ApplicationSession {
    + getInstance(): ApplicationSession
    + getCurrentScenario(): Scenario
    + getCurrentPlayer(): Player
    + updatePlayerBudget(player: Player, amount: int): boolean
}

class Scenario {
    + getStations(): Stations
    + getStationByNameID(nameID: String): Station
}

class Stations {
    + getStations(): List<Station>
    + upgradeStation(station: Station, buildingDTO: BuildingDTO): boolean
}

class Station {
    + getStationDetails(): String
    + getUpgradableBuildings(): List<Building>
    + getBuildingByNameID(nameID: String): Building
    + upgradeStation(buildingDTO: BuildingDTO): boolean
}

class Buildings {
    + getUpgradableBuildings(): List<Building>
    + upgradeStation(buildingDTO: BuildingDTO): boolean
    + addBuilding(building: Building): boolean
}

class Building {
    + getBuildingDetails(): String
}

class StationDTO {
    + getNameID(): String
}

class BuildingDTO {
    + getNameID(): String
    + getType(): String
    + getAvailabilityYear(): int
    + getEvolutionCost(): int
    + getEvolutionStagesLeft(): int
    + getEffect(): String
}

class StationMapper {
    + toStationDTOs(List<Station>): List<StationDTO>
}

class BuildingMapper {
    + toDTO(List<Building>): List<BuildingDTO>
    + toDomain(BuildingDTO): Building
}

' Relações principais
UpgradeStationUI --> UpgradeStationController : uses
UpgradeStationController --> ApplicationSession : uses
ApplicationSession --> Scenario : owns
Scenario "1" --> "1" Stations : has
Stations "1" --> "0..*" Station : contains
Station"1"--> "1" Buildings : has
Buildings"1" --> "0..*" Building : contains
UpgradeStationController --> StationMapper : uses
StationMapper --> "0..*" StationDTO : creates
UpgradeStationController --> BuildingMapper : uses
BuildingMapper --> "0..*" BuildingDTO : creates
BuildingMapper --> Building : maps to

@enduml
